--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,13 +4,17 @@ h1 {
 }
 table {
   width: 500px;
-  height: 400px;
+  height: 500px;
   padding: 1rem;
   margin: 0 auto;
   border-radius: 20px;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+table:hover {
+  box-shadow: 0 0 13px rgba(0, 0, 0, 0.2);
+}
+
 tbody th {
   width: 10%;
   color: grey;
@@ -21,7 +25,7 @@ tbody td {
 }
 tbody td p {
   width: 60%;
-  height: 85%;
+  height: 70%;
   margin: 0 auto;
   display: grid;
   place-items: center;
@@ -38,9 +42,19 @@ table th {
 }
 
 #month {
-  font-size: 2rem;
+  font-size: 4rem;
   border: none;
   position: relative;
+}
+
+#month:after {
+  content: "";
+  position: absolute;
+  bottom: 15%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(128, 128, 128, 0.26);
 }
 
 #month h2 {
@@ -55,15 +69,16 @@ table th {
   align-items: center;
   position: absolute;
   color: grey;
-  transform: translateY(90%);
+  transform: translateY(140%);
   border-radius: 50%;
   padding: 1rem;
-  border: 1px solid grey;
+  outline: 1px solid grey;
 }
 
 .arrow:hover {
   cursor: pointer;
-  background-color: #f2f2f2;
+  outline: none;
+  background-color: rgba(128, 128, 128, 0.3);
   color: black;
 }
 
